--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
-target_link_libraries(my_app PRIVATE Threads::Threads)
+target_link_libraries(sudokuSolver PRIVATE Threads::Threads)
 
 target_include_directories(sudokuSolver PRIVATE includes)
 
