--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
                 "${workspaceFolder}\\sudokuSolver.exe",
                 "${workspaceFolder}\\main.cpp",
                 // "${workspaceFolder}\\src\\main.cpp",
-                "${workspaceFolder}\\src\\*.cpp",
+                "${workspaceFolder}\\src\\*.cpp"
             ],
             "options": {
                 "cwd": "${workspaceFolder}/build"
