Moved util.hpp to util directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,7 @@
                 // "/O1",
                 "/EHsc",
                 "/I${workspaceFolder}\\includes",
+                "/I${workspaceFolder}",
                 "/Fe:",
                 "${workspaceFolder}\\sudokuSolver.exe",
                 "${workspaceFolder}\\main.cpp",
